--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -7,7 +7,7 @@
 	display: flex;
 	align-items: flex-end;
 	justify-content: center;
-	background-image: url(./assets/img/banner.jpg);
+	background-image: url(../img/banner.jpg);
 	background-size: cover;
 	background-position: center;
 }
